--- a/bio.html
+++ b/bio.html
@@ -7,20 +7,24 @@
         <link rel="stylesheet" type="text/css" href="./css/ahf.css">
     </HEAD>
     <body>
+        <div class="notice">Notice: You have traveled back through time to the year 2001...be careful interacting with the past can be dangerous!</div>
+        <div class="reminder">Once you're done living in the past, <a href="currentday.html">click here</a> to take a look at what this place looks like now.</div>
         <div class="nav-bar">
-            <A HREF="index.html">Home</A> -- <A HREF="bio.html">Band</A> -- <A HREF="show.html">Upcoming Shows</A> -- <A HREF="lyric.html">Lyrics</A> -- <A href="new.html">News</a> -- <A HREF="sound.html">Downloads</A> -- <A HREF="booking.html">Contact Info</A>
+                <A HREF="index.html">Home</A>  - <A HREF="bio.html">Band</A>  -  <A HREF="new.html">News</A> - <A HREF="pic.html">Pics</A> - <A HREF="show.html">Shows</A>  -  <A HREF="lyric.html">Lyrics</A>
         </div>
         <br/>
         <div class="content-section">
             At His Feet is a rock band that focuses on continious improvement musically, spirtually, and performance wise...we thrive off energetic crowds and we are thankful for the friends we meet at the shows we play...but our main goal is to worship God and to tell others about the open gift of salvation that has be presented to us through Jesus Christ and his death on the cross and his resurrection 3 days later...<br>
             <br>
-            Rob - Guitar & Vocals
+            <a target="_blank" href="https://robwalters.net">Rob</a> - Guitar & Vocals
             <br/>
-            Daniel - Bass & bgv's
+            <a target="_blank" href="https://www.facebook.com/daniel.hovis.37">Daniel</a> - Bass & bgv's
             <br>
-            Shaun - Guitar & bgv's
+            <a target="_blank" href="https://twitter.com/DearKavalier">Shaun</a> - Guitar & bgv's
             <br>
-            Trey - Drums
+            <a target="_blank" href="https://www.facebook.com/trey.calaway">Trey</a> - Drums
         </div>
+        <br/>
+        <div class="footer">A retro project by <a href="https://robwalters.net">RobWalters.net</a></div>        
     </body>
 </HTML>
